---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 2020-04-20
  Features:
    - P.U.M.P. selection tool available for the shurtcut bar.
    - For all oil wells within a selection, ghosts for pumpjacks and the pipes connecting the pumpjacks will be placed.
    - Underground pipes will be used as much as possible.
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 2020-04-24
  Fixes:
    - Bug when detection to place multiple underground pipes for a longer distance failed, and would instead place the remaining distance above ground.
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 2020-04-27
  Changes:
    - Start underground pipe directly from pump output when possible.
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 2020-04-27
  Fixes:
    - Miscalutation in underground pipe distance.
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 2020-05-02
  Changes:
    - Improve behavior for very small selections.
  Features:
    - Add support for any liquid resource for which a suitable miner is available. If there's multiple miner types available for the same resource, the one Factorio returns first is picked. Rectangular shaped miners are excluded due to limitations in the planner routine.
    - Retrieve miner's pipe output position and size from its prototype. If there are mutliple output resources, or multiple outputs for the same resource, the ones Factorio returns first are picked. 
---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: ?
  Changes:
    - ?