@@ -12,3 +12,9 @@ mixed-resources=P.U.M.P. cannot mix resources.
 other-pipes-nearby=P.U.M.P. aborted, because there are other pipes present within the selected area.
 no-suitable-extractor=P.U.M.P. did not find a suitable miner for the resource '__1__'.
 extractor-must-be-square=P.U.M.P. planner can only handle square miners. The resource '__1__' only has rectangular shaped miner(s) available.
+
+[mod-setting-name]
+pump-interface-with-module-inserter-mod=Insert modules
+
+[mod-setting-description]
+pump-interface-with-module-inserter-mod=When enabled, P.U.M.P. uses the the configuration of 'Module Inserter' to add modules to the placed ghosts as well.
