@@ -31,5 +31,6 @@ Date: 2020-05-02
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.5
 Date: ?
-  Changes:
-    - ?
+  Features:
+    - If 'Module Inserter' is installed, retrieve and apply module configuration for the entities placed by P.U.M.P.. If 'Module Inserter' is not installed, no modules are added.
+    - Add setting to enable/disable the usage of 'Module Inserter'. If 'Module Inserter' is not installed, the setting is hidden. It's enabled by default.    
